# llm-quickstart

./: .gitignore  README.md  classify_baseline.py  classify_embeddings.py  compare.py  compare_with_systemprompt.py  eval_robustness.py  extract_anthropic.py  extract_openapi.py  hello_anthropic.py  hello_openai.py  main.py  pyproject.toml  strategy.md  stream_anthropic.py  stream_openai.py
llm_quickstart/: nearest.py  summarize.py  tokenviz.py
notes/: week2_embeddings.md  week2_kickoff.md  week2_milestones.md
tests/: test_smoke.py  test_summarize.py
