[project]
name = "llm-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "anthropic>=0.100.0",
    "openai>=2.35.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
    "tiktoken>=0.13.0",
    "typer>=0.25.1",
]

[project.scripts]
summarize = "llm_quickstart.summarize:app"
tokenviz = "llm_quickstart.tokenviz:app"
nearest = "llm_quickstart.nearest:app"

[tool.uv]
package = true

[tool.setuptools]
packages = ["llm_quickstart"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"classify_*.py" = ["N806", "N816"]
"eval_*.py" = ["N806", "N816"]

[tool.ruff.format]
quote-style = "double"
